# rover-2024

./: README.md
ros2_ws/odrive_remote/: CMakeLists.txt  package.xml
ros2_ws/odrive_remote/src/: odrive_remote.cpp
ros2_ws/src/odrive_remote/include/: odrive_remote_node.hpp
ros2_ws/src/teleop/: package.xml  setup.py
ros2_ws/src/teleop/teleop/: teleop_node.py
